--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,17 +5,38 @@ $SemiBlack: hsl(0, 0%, 8%);
 
 //screen breakpoints
 $Mobile: 375px;
+$SmallTablet: 750px;
+$NavFlip: 850px;
+$Tablet: 1150px;
 $Desktop: 1440px;
 
 //screen breakpoints mixins
 @mixin mobile {
-    @media (max-width: $Mobile) {
-        @content;
-    }
+  @media (max-width: $Mobile) {
+    @content;
+  }
+}
+
+@mixin small-tablet {
+  @media (max-width: $SmallTablet) {
+    @content;
+  }
+}
+
+@mixin nav-flip {
+  @media (max-width: $NavFlip) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (max-width: $Tablet) {
+    @content;
+  }
 }
 
 @mixin desktop {
-    @media (min-width: $Mobile) {
-        @content;
-    }
+  @media (min-width: $Mobile) {
+    @content;
+  }
 }
