--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: $SemiWhite;
 }
 
 .app {
@@ -14,8 +13,22 @@
   padding: 20px 50px;
   font-size: 18px;
   font-family: "Epilogue", sans-serif;
+  background: $SemiWhite;
 
   @include small-tablet {
     padding: 20px;
   }
+}
+
+.display {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.arrow {
+  margin-left: 5px;
+  margin-bottom: 2px;
 }
